--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,6 @@
 body {
   margin: 0;
   padding: 0;
-}
-
-body {
   /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
@@ -58,7 +55,7 @@ body {
   font-weight: 300;
   font-style: normal;
   font-variation-settings: "wdth" 100;
-  height: 100vh;
+  height: 100dvh;
   overflow-y: scroll;
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
@@ -73,7 +70,7 @@ main > section {
 main > section > h2 {
   display: flex;
   position: absolute;
-  right: 0.75rem;
+  right: 1rem;
   bottom: 0;
   font-size: clamp(1rem, 10vw, 4rem);
   text-transform: uppercase;
@@ -155,12 +152,12 @@ main > section > h2 {
 .home-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100svh;
+  height: 100dvh;
   position: relative;
   justify-content: center;
 
   background-color: var(--clr-primary-bg);
-  width: 100svw;
+  width: 100dvw;
 }
 
 .home-flex-1 {
@@ -202,13 +199,13 @@ main > section > h2 {
 .name {
   font-size: clamp(2rem, 8vw, 6rem);
   background-color: var(--clr-primary-bg);
-  /* color: var(--clr-font-accent); */
-  color: var(--clr-primary-bg);
+  color: var(--clr-font-accent);
+  /* color: var(--clr-primary-bg); */
   font-weight: 900;
   text-shadow: var(--glow);
   letter-spacing: -0.15ch;
   word-spacing: -0.5ch;
-  -webkit-text-stroke: 1px var(--clr-font-accent);
+  /* -webkit-text-stroke: 1px var(--clr-font-accent); */
 }
 
 h1.name {
@@ -323,11 +320,11 @@ h1.name {
 .projects-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100svh;
+  height: 100dvh;
   position: relative;
   justify-content: center;
   background-color: var(--clr-primary-bg);
-  width: 100svw;
+  width: 100dvw;
 }
 
 #project-1 {
@@ -349,9 +346,9 @@ h1.name {
   margin: 0 auto;
   display: grid;
   grid-template: "projectOne projectTwo projectThree";
-  width: 85svw;
+  width: 85dvw;
   gap: 3rem;
-  height: 80svh;
+  height: 80dvh;
   overflow: hidden;
   align-content: center;
   justify-content: center;
@@ -412,8 +409,7 @@ h1.name {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* align-content: center; */
-  height: 100svh;
+  height: 100dvh;
   text-align: center;
   background-color: var(--clr-primary-bg);
   position: relative;
@@ -421,46 +417,118 @@ h1.name {
 }
 
 .about-inner-wrapper {
-  height: 85svh;
-  max-width: 85svw;
+  display: flex;
+  height: 85dvh;
+  width: 90dvw;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
 
-.about-grid-top {
+.about-left {
   display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  border-right: 3px solid var(--clr-secondary-bg);
+  flex: 1;
+  padding-right: 2rem;
 }
 
 .headshot-img {
+  display: flex;
+  object-fit: contain;
   height: 15rem;
-  border-radius: 2rem;
-  z-index: 100;
+  margin: 0 auto;
+  border-radius: 1rem;
+  outline: 3px solid var(--clr-font-accent);
+  outline-offset: 0.5rem;
 }
 
-.about-grid-right::after {
-  content: "";
-  height: 20rem;
-  position: absolute;
-  aspect-ratio: 1;
-  background: red;
-  border-radius: 2rem;
-  rotate: 5deg;
+.about-span {
+  text-align: start;
+  text-wrap: pretty;
+  font-size: clamp(0.85rem, 1vw, 1rem);
+  line-height: 2.5ch;
 }
-.about-grid-left {
+
+.about-span::first-letter {
+  font-size: xxx-large;
+}
+
+.education-wrapper {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.education-wrapper h3 {
+  text-decoration: underline;
+  text-underline-offset: 1ch;
+}
+
+.education {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  flex: 2;
+  gap: 0.5rem;
+  font-weight: 300;
 }
-.about-grid-right {
+
+.blue-text {
+  color: var(--clr-font-accent);
+  font-weight: 800;
+}
+
+.education-item {
+  text-align: left;
+}
+
+.education-time-frame {
+  opacity: 75%;
+}
+
+.skills-wrapper {
   display: flex;
-  /* flex-direction: column; */
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  flex: 1;
+  justify-content: center;
+  flex: 3;
+  gap: 1rem;
 }
-.education-wrapper {
+
+.skills-card {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  height: fit-content;
+  width: max-content;
+  gap: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  li {
+    border: 3px solid var(--clr-secondary-bg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 0.5rem;
+  }
+  h3 {
+    color: var(--clr-font-accent);
+    font-size: large;
+  }
+}
+
+.skills-card ul {
   display: flex;
 }
 
@@ -471,10 +539,10 @@ h1.name {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100svh;
+  height: 100dvh;
   text-align: center;
   min-width: 240px;
-  width: 100svw;
+  width: 100dvw;
   background-color: var(--clr-primary-bg);
   position: relative;
   overflow: hidden;
@@ -486,7 +554,7 @@ h1.name {
   justify-content: center;
   position: unset;
   gap: 1.3rem;
-  max-height: 80svh;
+  max-height: 80dvh;
   a {
     height: 5rem;
     aspect-ratio: 1;
@@ -498,7 +566,7 @@ h1.name {
 /* -----------------FOOTER----------------- */
 
 .footer-wrapper {
-  height: 10svh;
+  height: 10dvh;
   display: flex;
   width: 100vw;
   align-items: center;
@@ -530,7 +598,7 @@ h1.name {
       "projectTwo"
       "projectThree";
     gap: 0;
-    max-height: 80svh;
+    max-height: 80dvh;
   }
 
   .project-card {
@@ -540,7 +608,7 @@ h1.name {
     gap: 2rem;
     height: auto;
     min-height: calc(80dvh / 3);
-    min-width: 100svw;
+    min-width: 100dvw;
     align-items: center;
     justify-content: center;
     overflow: wrap;
@@ -563,6 +631,33 @@ h1.name {
     max-width: 30rem;
   }
   /* ----------------- ABOUT---------- */
+
+  .about-inner-wrapper {
+    flex-direction: column;
+
+    hr {
+      display: none;
+    }
+  }
+
+  .about-left {
+    border: none;
+    margin: 0;
+    padding: 0;
+    flex-direction: row;
+    flex: 0;
+  }
+
+  .skills-wrapper {
+    margin: 0;
+    padding: 0;
+    gap: 0;
+    flex: 0;
+  }
+
+  .skills-wrapper ul {
+    flex-direction: row;
+  }
 }
 
 /* -----------------MOBILE---------- */
@@ -605,8 +700,8 @@ h1.name {
     gap: 1.5rem;
     position: fixed;
     flex-direction: column;
-    width: 100svw;
-    height: 100svh;
+    width: 100dvw;
+    height: 100dvh;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(50px);
@@ -646,14 +741,14 @@ h1.name {
     gap: 0;
     padding: 0;
     margin: 0;
-    width: 100svw;
+    width: 100dvw;
     place-content: center;
     place-items: center;
   }
 
   .project-card {
-    min-width: 100svw;
-    max-height: calc(85svh / 3);
+    min-width: 100dvw;
+    max-height: calc(85dvh / 3);
     outline: 5px solid var(--clr-secondary-bg);
     overflow: hidden;
     width: 100%;
@@ -718,7 +813,7 @@ h1.name {
     flex-direction: column-reverse;
   }
   .about-grid-left {
-    max-width: 65svw;
+    max-width: 65dvw;
   } */
 }
 
